examples/test/testpolicy17958.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17958
  namespace: namespace77
spec:
  podSelector:
    matchLabels:
      key36: value12
      key19: value41
      key2: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value37
          key5: value20
          key40: value0
      podSelector:
        matchLabels:
          key2: value31
          key3: value39
          key15: value28
